# yeft

./: .gitignore  CMakeLists.txt  README.md  times3DFHTvs3DCudaHT.docx
3dparty/: CMakeLists.txt
3dparty/fftw/: libfftw3-3.lib
3dparty/fftw-3.3.5-dll64/: libfftw3-3.exp
3dparty/googletest/: CMakeLists.txt
C.v1/: FFTwithDMA.c  test_acc_new.c
C.v2/: FFT_OpenACC.c
C.v3/: FFT_OpenACC_iterative.c
FORTRAN/: FFTwithDMA.f08
MATLAB/: test2.m
MATLAB/dft/: dct1D.m  dft3D.m
cmake/: functions.cmake
docs/: Реализация DHT на многоядерных ускорителях.docx
docs/MATLAB/: gradFourier.m  test.m
docs/MATLAB/dft/: dct2D.m  dft1D.m  dft2D.m  dftND.m  idft1D.m  idft2D.m  idft3D.m  idftND.m
include/: CommandLineParser.h  cufht.h  dev_array.h  fht.h  kernel.h  rapidht.h  realfft.h  utilities.h
include/fht/: fht.h
include/fhtCuda/: kernel.h
projects/fht/: CMakeLists.txt  fht.cpp
projects/fhtCuda/: CMakeLists.txt  fht.cpp  fhtCuda.cpp  kernel.cu  kernel.h
projects/tests/: first_test.cpp
source/: CMakeLists.txt  cufht.cpp  fht.cpp  kernel.cu  rapidht.cpp  realfft.cpp  utilities.cpp
source/cufht/: CMakeLists.txt  cufht.cpp  fhtCuda.cpp  main.cpp
source/fftw/: fftw.cpp
source/fht/: CMakeLists.txt  fht.cpp  main.cpp
source/fhtCuda/: CMakeLists.txt  dev_array.h
source/realfft/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  fdht1d_test.cpp  fdht2d_test.cpp  fdhtnd_test.cpp  first_test.cpp  test1.cpp  test2.cpp  test_fdht1d.cpp  test_fdht2d.cpp  test_fdht3d.cpp  test_fdhtnd.cpp  test_image_clustering.cpp  test_load_images.cpp
texts/: text.docx  times3DFHTvs3DCudaHT.xlsx
