set(RAPIDHT_LIBRARIES coreht)
project(${RAPIDHT_LIBRARIES})

find_package(OpenMP)
find_package(MPI)

IF(OPENMP_FOUND)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

include_directories(SYSTEM ${MPI_INCLUDE_PATH})



add_exe(${RAPIDHT_LIBRARIES})


target_include_directories(${RAPIDHT_LIBRARIES} PRIVATE ${RAPIDHT_INCLUDE_DIRS})
target_link_libraries(${RAPIDHT_LIBRARIES} PRIVATE ${MPI_C_LIBRARIES})
set_target_properties(${RAPIDHT_LIBRARIES} PROPERTIES FOLDER Demos)

	